# clickease

./: .directory  .envrc.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  README.md  SECURITY_CONCERNS.md  dev  eslint.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-age-check.yml  release.yml
docs/discovery/: ARCHITECTURE.md  OS_PUBLISHING.md  OS_TOOLING.md  SECURITY_AUDIT.md  STYLING_CONSIDERATIONS.md
docs/plan/: CICD_STRATEGY.md  IMPLEMENTATION.md  ORCHESTRATION.md  REPO_STRUCTURE.md  TESTING.md
src/: index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/permissions/: mod.rs
src-tauri/src/scheduler/: mod.rs  types.rs
src-tauri/src/simulator/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
src/services/: api.ts  theme.ts
src/styles/: global.css
src/types/: simulator.ts
